--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,18 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+
+    <style name="textView" parent="Widget.AppCompat.TextView">
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:fontFamily">@font/sanchez_regular</item>
+        <item name="android:padding">@dimen/tiny_small_margin</item>
+        <item name="android:textSize">@dimen/default_textsize</item>
+    </style>
+
+    <style name="withAlphaTextView" parent="@style/textView">
+        <item name="android:alpha">0.7</item>
+    </style>
+
 </resources>
