--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#fbecec</color>
-    <color name="colorPrimaryDark">#F0FBECEC</color>
+    <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#92E3A9</color>
 
     <color name="black">#000000</color>
