--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -16,20 +16,25 @@
     <dimen name="default_textsize">14sp</dimen>
     <dimen name="large_textsize">16sp</dimen>
     <dimen name="heading_textsize">20sp</dimen>
+    <dimen name="btn_text_size">14sp</dimen>
 
-
+    <dimen name="icon_width">35dp</dimen>
+    <dimen name="icon_Height">35dp</dimen>
     <dimen name="small_image">24dp</dimen>
     <dimen name="large_image">36dp</dimen>
+    <dimen name="lottie_icon_width">130dp</dimen>
+    <dimen name="lottie_icon_height">90dp</dimen>
 
-    <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="nav_header_vertical_spacing">16dp</dimen>
-    <dimen name="nav_header_height">200dp</dimen>
 
-    <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin">16dp</dimen>
-    <dimen name="fab_margin">16dp</dimen>
-    <dimen name="profile_width">75dp</dimen>
-    <dimen name="profile_height">75dp</dimen>
+    <dimen name="btn_height">40dp</dimen>
+    <dimen name="add_btn_width">60dp</dimen>
+    <dimen name="small_btn_height">32dp</dimen>
+
+    <dimen name="bg_border_radius">8dp</dimen>
+    <dimen name="btn_round_radius">6dp</dimen>
+
+    <dimen name="divider_height">1dp</dimen>
+
+
 
 </resources>
