--- a/app/src/main/res/drawable/btn_primary.xml
+++ b/app/src/main/res/drawable/btn_primary.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <corners android:radius="@dimen/bg_border_radius" />
+    <corners android:radius="@dimen/small_radius" />
     <solid android:color="@color/colorPrimary" />
 <!--    <padding-->
 <!--        android:bottom="@dimen/small_padding"-->
