--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="white">#FFFFFF</color>
     <color name="grey">#C4C4C4</color>
     <color name="blue">#3F51B5</color>
+    <color name="shadow">#80000000</color>
 
     <color name="textColorDarkGrey">#373e43</color>
     <color name="colorGreyDark">#4B4B4B</color>
