--- a/app/src/main/res/drawable/ic_right_arrow.xml
+++ b/app/src/main/res/drawable/ic_right_arrow.xml
@@ -1,10 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="10dp"
-    android:height="14dp"
-    android:viewportWidth="10"
-    android:viewportHeight="14">
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
   <path
-      android:pathData="M0.41,1.7467L6.32,7L0.41,12.2533L2,13.6667L9.5,7L2,0.3333L0.41,1.7467Z"
-      android:fillColor="#000000"
-      android:fillAlpha="0.51"/>
+      android:fillColor="#FF000000"
+      android:pathData="M8.59,16.59L13.17,12 8.59,7.41 10,6l6,6 -6,6 -1.41,-1.41z"/>
 </vector>
