--- a/app/src/main/res/layout/bubble_credibility_checker.xml
+++ b/app/src/main/res/layout/bubble_credibility_checker.xml
@@ -8,6 +8,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/default_margin"
+        android:focusableInTouchMode="true"
+        android:focusable="true"
+        android:layout_marginBottom="@dimen/small_margin"
         android:layout_marginTop="@dimen/default_margin"
         android:layout_marginEnd="@dimen/default_margin">
 
