- Local database integration  - Home fragment added

--- a/app/src/main/res/layout/fragment_factss_check_list.xml
+++ b/app/src/main/res/layout/fragment_factss_check_list.xml
@@ -1,10 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:background="@color/white"
-    android:layout_height="match_parent"
-    tools:context=".fragments.FactsCheckListFragment">
+<layout>
+
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/colorPrimary"
+        tools:context=".modules.factchecks.fragments.FactsCheckListFragment">
+
+        <include
+            android:id="@+id/llRecyclerView"
+            layout="@layout/layout_recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="@dimen/small_margin" />
 
 
-</FrameLayout>
+    </FrameLayout>
+
+</layout>
