--- a/app/src/main/res/layout/row_overlay_fact_checks.xml
+++ b/app/src/main/res/layout/row_overlay_fact_checks.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+
+        <variable
+            name="model"
+            type="com.theshoremedia.database.entity.FactCheckHistoryModel" />
+    </data>
     <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
@@ -21,7 +27,7 @@
                 android:background="@color/grey"
                 android:gravity="center"
                 android:padding="@dimen/small_padding"
-                android:text="@string/tiny_dummy_text"
+                tools:text="@string/tiny_dummy_text"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -40,7 +46,8 @@
                     android:id="@+id/tvNewsHeading"
                     style="@style/textView"
                     android:padding="@dimen/small_padding"
-                    android:text="@string/medium_dummy_text"
+                    android:text="@{model.title}"
+                    tools:text="@string/medium_dummy_text"
                     android:textAlignment="gravity"
                     android:textSize="@dimen/large_textsize"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -60,11 +67,12 @@
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/tvNewsDescription"
                     style="@style/withAlphaTextView"
+                    android:text="@{model.description}"
                     android:layout_width="0dp"
                     android:layout_marginStart="@dimen/extra_small_margin"
                     android:ellipsize="end"
                     android:maxLines="2"
-                    android:text="@string/large_dummy_text"
+                    tools:text="@string/large_dummy_text"
                     android:textAlignment="gravity"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/ivNewsIcon"
@@ -77,8 +85,9 @@
                     android:layout_marginTop="@dimen/small_margin"
                     android:layout_marginEnd="@dimen/extra_small_margin"
                     android:ellipsize="end"
+                    android:text="@{model.date}"
                     android:maxLines="2"
-                    android:text="@string/small_dummy_text"
+                    tools:text="@string/small_dummy_text"
                     android:textAlignment="gravity"
                     app:layout_constraintStart_toEndOf="@+id/ivNewsIcon"
                     app:layout_constraintTop_toBottomOf="@+id/tvNewsDescription" />
@@ -89,7 +98,7 @@
                     android:layout_width="@dimen/small_image"
                     android:layout_height="@dimen/small_image"
                     android:layout_marginTop="@dimen/small_margin"
-                    android:src="@drawable/ic_logo"
+                    android:src="@drawable/ic_bookmark_blank"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tvNewsDescription" />
 
