--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -6,8 +6,8 @@
     android:layout_height="match_parent">
 
     <com.google.android.material.appbar.AppBarLayout
-        android:layout_width="match_parent"
         android:id="@+id/appbarLayout"
+        android:layout_width="match_parent"
         android:layout_height="?android:attr/actionBarSize">
 
         <androidx.appcompat.widget.Toolbar
@@ -18,15 +18,15 @@
 
             <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_marginEnd="?android:attr/actionBarSize"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="?android:attr/actionBarSize">
 
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/tvToolbarTitle"
                     style="@style/textView"
                     android:text="@string/app_name"
-                    android:visibility="gone"
-                    android:textSize="@dimen/heading_textsize" />
+                    android:textSize="@dimen/heading_textsize"
+                    android:visibility="gone" />
 
                 <androidx.appcompat.widget.AppCompatImageView
                     android:id="@+id/ivShoreIcon"
@@ -42,11 +42,20 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <FrameLayout
+    <!--    <FrameLayout-->
+    <!--        android:id="@+id/frame"-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="match_parent"-->
+    <!--        app:layout_behavior="@string/appbar_scrolling_view_behavior" />-->
+
+    <fragment
         android:id="@+id/frame"
+        android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+        app:defaultNavHost="true"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        app:navGraph="@navigation/nav_main" />
 
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
