--- a/app/src/main/res/layout/bubble_article_view.xml
+++ b/app/src/main/res/layout/bubble_article_view.xml
@@ -2,99 +2,112 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-<!--    <ScrollView-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent">-->
+    <data>
+
+        <variable
+            name="model"
+            type="com.theshoremedia.database.entity.FactCheckHistoryModel" />
+
+    </data>
+
+    <!--    <ScrollView-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="match_parent">-->
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="@dimen/small_margin"
+        android:background="@drawable/bg_rounded"
+        android:orientation="vertical"
+        android:paddingStart="@dimen/small_padding"
+        android:paddingEnd="@dimen/small_padding"
+        android:paddingBottom="@dimen/small_padding">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:orientation="horizontal">
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/ivBack"
+                android:layout_width="@dimen/small_image"
+                android:layout_height="@dimen/small_image"
+                android:backgroundTint="@color/black"
+                android:src="@drawable/ic_left_arrow"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/ivBookMark"
+                android:layout_width="@dimen/small_image"
+                android:layout_height="@dimen/small_image"
+                android:layout_marginEnd="@dimen/default_margin"
+                android:backgroundTint="@color/black"
+                android:src="@drawable/ic_bookmark_blank"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/ivShare"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/ivShare"
+                android:layout_width="@dimen/small_image"
+                android:layout_height="@dimen/small_image"
+                android:backgroundTint="@color/black"
+                android:src="@drawable/ic_share"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tvTitle"
+            style="@style/textView"
+            android:text="@{model.title}"
+            android:textSize="@dimen/heading_textsize" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_margin="@dimen/small_margin"
-            android:background="@drawable/bg_rounded"
-            android:paddingStart="@dimen/small_padding"
-            android:paddingEnd="@dimen/small_padding"
-            android:paddingBottom="@dimen/small_padding"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:orientation="horizontal">
-
-                <androidx.appcompat.widget.AppCompatImageView
-                    android:id="@+id/ivBack"
-                    android:layout_width="@dimen/small_image"
-                    android:layout_height="@dimen/small_image"
-                    android:backgroundTint="@color/black"
-                    android:src="@drawable/ic_left_arrow"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <androidx.appcompat.widget.AppCompatImageView
-                    android:id="@+id/ivBookMark"
-                    android:layout_width="@dimen/small_image"
-                    android:layout_height="@dimen/small_image"
-                    android:layout_marginEnd="@dimen/default_margin"
-                    android:backgroundTint="@color/black"
-                    android:src="@drawable/ic_bookmark_blank"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toStartOf="@+id/ivShare"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <androidx.appcompat.widget.AppCompatImageView
-                    android:id="@+id/ivShare"
-                    android:layout_width="@dimen/small_image"
-                    android:layout_height="@dimen/small_image"
-                    android:backgroundTint="@color/black"
-                    android:src="@drawable/ic_share"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
             <androidx.appcompat.widget.AppCompatTextView
-                style="@style/textView"
-                android:text="@string/medium_dummy_text"
-                android:textSize="@dimen/heading_textsize" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <androidx.appcompat.widget.AppCompatTextView
-                    style="@style/withAlphaTextView"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:gravity="start"
-                    android:maxLines="1"
-                    android:text="@string/tiny_dummy_text" />
-
-                <androidx.appcompat.widget.AppCompatTextView
-                    style="@style/withAlphaTextView"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:gravity="end"
-                    android:maxLines="1"
-                    android:text="@string/tiny_dummy_text" />
-
-            </LinearLayout>
-
-            <androidx.appcompat.widget.AppCompatImageView
-                android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:layout_marginTop="@dimen/small_margin"
-                android:background="@color/grey" />
+                android:id="@+id/tvNewsSource"
+                style="@style/withAlphaTextView"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:gravity="start"
+                android:maxLines="1"
+                android:text="@{model.source}"
+                android:textColor="@color/btnBgColorRed" />
 
             <androidx.appcompat.widget.AppCompatTextView
-                style="@style/textView"
-                android:layout_height="match_parent"
-                android:layout_marginTop="@dimen/default_margin"
-                android:text="@string/extra_large_dummy_text"
-                android:textAlignment="viewStart"
-                android:textSize="@dimen/large_textsize" />
+                android:id="@+id/tvNewsDate"
+                style="@style/withAlphaTextView"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:gravity="end"
+                android:maxLines="1"
+                android:text="@{model.date}" />
+
         </LinearLayout>
-<!--    </ScrollView>-->
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/ivNewsIcon"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:layout_marginTop="@dimen/small_margin" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tvNewsDescription"
+            style="@style/textView"
+            android:layout_height="match_parent"
+            android:layout_marginTop="@dimen/default_margin"
+            android:text="@{model.description}"
+            android:textAlignment="viewStart"
+            android:textSize="@dimen/large_textsize" />
+    </LinearLayout>
+    <!--    </ScrollView>-->
 </layout>
