--- a/app/src/main/res/layout/row_fact_check.xml
+++ b/app/src/main/res/layout/row_fact_check.xml
@@ -82,7 +82,7 @@
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/tvNewsDate"
                 style="@style/withAlphaTextView"
-                android:layout_marginEnd="@dimen/default_margin"
+                android:layout_marginEnd="@dimen/small_margin"
                 android:ellipsize="end"
                 android:maxLines="2"
                 android:text="@{model.date}"
@@ -92,15 +92,16 @@
                 app:layout_constraintTop_toTopOf="@id/ivBookMark"
                 tools:text="@string/small_dummy_text" />
 
-
-            <androidx.appcompat.widget.AppCompatImageView
+            <com.airbnb.lottie.LottieAnimationView
                 android:id="@+id/ivBookMark"
-                android:layout_width="@dimen/small_image"
-                android:layout_height="@dimen/small_image"
+                android:layout_width="@dimen/large_image"
+                android:layout_height="@dimen/large_image"
+                android:layout_gravity="center"
                 android:layout_marginTop="@dimen/small_margin"
-                android:src="@drawable/ic_bookmark_blank"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tvNewsDescription" />
+                app:layout_constraintTop_toBottomOf="@+id/tvNewsDescription"
+                app:lottie_fileName="lottie/favourite.json" />
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
