service related optimization

--- a/app/src/main/res/layout/bubble_credibility_checker.xml
+++ b/app/src/main/res/layout/bubble_credibility_checker.xml
@@ -26,8 +26,10 @@
                 android:background="@drawable/bg_rounded_end"
                 android:padding="@dimen/extra_small_margin"
                 android:paddingStart="@dimen/default_padding"
+                android:textStyle="bold"
                 android:paddingEnd="@dimen/default_padding"
-                android:text="@string/small_dummy_text"
+                android:text="@string/news_stories"
+                android:textSize="@dimen/large_textsize"
                 android:textAlignment="center"
                 android:visibility="visible"
                 app:layout_constraintStart_toStartOf="parent"
