--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#fbecec</color>
     <color name="colorPrimaryDark">#000000</color>
-    <color name="colorAccent">#92E3A9</color>
+    <color name="colorAccent">#373e43</color>
 
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
