--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -42,5 +42,10 @@
             app:argType="com.theshoremedia.database.entity.FactCheckHistoryModel" />
 
     </fragment>
+    <fragment
+        android:id="@+id/nav_settings"
+        android:name="com.theshoremedia.modules.factchecks.fragments.SettingsFragment">
+
+    </fragment>
 
 </navigation>
