--- a/app/src/main/res/xml/accessibility_service_config.xml
+++ b/app/src/main/res/xml/accessibility_service_config.xml
@@ -5,6 +5,6 @@
     android:accessibilityFeedbackType="feedbackAllMask"
     android:accessibilityFlags="flagDefault"
     android:packageNames="@string/whatsapp_package_name"
-    android:description="@string/app_name"
+    android:description="@string/permission_accessibility_description"
     android:settingsActivity="com.theshoremedia.activity.MainActivity"
     android:canRetrieveWindowContent="true" />
