--- a/app/src/main/res/layout/row_fact_check.xml
+++ b/app/src/main/res/layout/row_fact_check.xml
@@ -32,7 +32,7 @@
                 android:ellipsize="end"
                 android:maxLines="2"
                 android:padding="@dimen/small_padding"
-                android:text="@{model.title}"
+                android:text="@{model.articleTitle}"
                 android:textAlignment="gravity"
                 android:textSize="@dimen/large_textsize"
                 android:textStyle="bold"
@@ -58,7 +58,7 @@
                 android:layout_marginStart="@dimen/extra_small_margin"
                 android:ellipsize="end"
                 android:maxLines="2"
-                android:text="@{model.description}"
+                android:text="@{model.article}"
                 android:textAlignment="gravity"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/ivNewsIcon"
@@ -72,7 +72,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/extra_small_margin"
                 android:gravity="center"
-                android:text="@{model.source}"
+                android:text="@{model.sourceName}"
                 android:textColor="@color/btnBgColorRed"
                 app:layout_constraintBottom_toBottomOf="@+id/tvNewsDate"
                 app:layout_constraintStart_toEndOf="@+id/ivNewsIcon"
