--- a/app/src/main/res/layout/row_overlay_fact_checks.xml
+++ b/app/src/main/res/layout/row_overlay_fact_checks.xml
@@ -47,7 +47,7 @@
                     android:id="@+id/tvNewsHeading"
                     style="@style/textView"
                     android:padding="@dimen/small_padding"
-                    android:text="@{model.title}"
+                    android:text="@{model.articleTitle}"
                     android:textAlignment="gravity"
                     android:textSize="@dimen/large_textsize"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -72,7 +72,7 @@
                     android:layout_marginStart="@dimen/extra_small_margin"
                     android:ellipsize="end"
                     android:maxLines="2"
-                    android:text="@{model.description}"
+                    android:text="@{model.article}"
                     android:textAlignment="gravity"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/ivNewsIcon"
