--- a/app/src/main/res/layout/activity_shore_checks.xml
+++ b/app/src/main/res/layout/activity_shore_checks.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:theme="@android:style/Theme.Translucent.NoTitleBar"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/transparent"
+    android:theme="@android:style/Theme.Translucent.NoTitleBar"
     tools:context=".activity.ShoreChecksActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:text="@string/large_dummy_text"
+        android:id="@+id/textView"
+        style="@style/textView" />
+
+</LinearLayout>
