--- a/app/src/main/res/layout/bubble_article_view.xml
+++ b/app/src/main/res/layout/bubble_article_view.xml
@@ -65,7 +65,7 @@
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvTitle"
             style="@style/textView"
-            android:text="@{model.title}"
+            android:text="@{model.articleTitle}"
             android:textSize="@dimen/heading_textsize" />
 
         <LinearLayout
@@ -80,7 +80,7 @@
                 android:layout_weight="1"
                 android:gravity="start"
                 android:maxLines="1"
-                android:text="@{model.source}"
+                android:text="@{model.sourceName}"
                 android:textColor="@color/btnBgColorRed" />
 
             <androidx.appcompat.widget.AppCompatTextView
@@ -105,7 +105,7 @@
             style="@style/textView"
             android:layout_height="match_parent"
             android:layout_marginTop="@dimen/default_margin"
-            android:text="@{model.description}"
+            android:text="@{model.article}"
             android:textAlignment="viewStart"
             android:textSize="@dimen/large_textsize" />
     </LinearLayout>
