--- a/app/src/main/res/layout/bubble_shore_icon.xml
+++ b/app/src/main/res/layout/bubble_shore_icon.xml
@@ -1,42 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="50dp"
-    android:layout_height="50dp"
+    android:layout_width="55dp"
+    android:layout_height="55dp"
     android:layout_gravity="center_horizontal">
 
 
-    <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/ivShoreLogo"
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/bg_circle"
-        android:backgroundTint="@color/colorPrimary"
-        android:src="@drawable/ic_logo"
-        android:tag="Click" />
+        android:padding="@dimen/small_padding">
 
-    <LinearLayout
-        android:id="@+id/llUnreadCount"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="end"
-        android:layout_marginStart="@dimen/tiny_small_margin"
-        android:layout_marginTop="@dimen/tiny_small_margin"
-        android:layout_marginEnd="@dimen/tiny_small_margin"
-        android:background="@drawable/bubble_notification"
-        android:paddingStart="@dimen/extra_small_margin"
-        android:paddingEnd="@dimen/extra_small_margin"
-        android:paddingBottom="@dimen/tiny_small_margin"
-        android:visibility="gone">
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/ivShoreLogo"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/bg_circle"
+            android:backgroundTint="@color/colorPrimary"
+            android:src="@drawable/ic_logo"
+            android:tag="Click" />
 
-        <TextView
-            android:id="@+id/tvUnreadCount"
+        <LinearLayout
+            android:id="@+id/llUnreadCount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:textSize="@dimen/small_textsize"
-            android:textStyle="bold">
+            android:layout_gravity="end"
+            android:layout_marginStart="@dimen/tiny_small_margin"
+            android:layout_marginTop="@dimen/tiny_small_margin"
+            android:layout_marginEnd="@dimen/tiny_small_margin"
+            android:background="@drawable/bubble_notification"
+            android:paddingStart="@dimen/extra_small_margin"
+            android:paddingEnd="@dimen/extra_small_margin"
+            android:paddingBottom="@dimen/tiny_small_margin"
+            android:visibility="gone">
 
-        </TextView>
-    </LinearLayout>
+            <TextView
+                android:id="@+id/tvUnreadCount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:textSize="@dimen/small_textsize"
+                android:textStyle="bold">
 
+            </TextView>
+        </LinearLayout>
+    </FrameLayout>
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="@style/Widget.AppCompat.ProgressBar"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:clickable="false"
+        android:indeterminateDrawable="@drawable/bg_red_progessbar"
+        android:padding="@dimen/tiny_small_margin" />
 </FrameLayout>
